# django-auto-datatables

./: .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  Pipfile  README.md  docker-compose.yml  pyproject.toml  setup.py  tasks.py  test.py
auto_datatables/: apps.py  filters.py  mixins.py  renderers.py  serializers.py  table.py  tables copy.py  tables.py  utils.py  views copy.py  views.py
auto_datatables/static/auto_datatables/css/: auto-datatable.css
auto_datatables/static/auto_datatables/js/: auto-datatables.js
auto_datatables/templates/auto_datatables/: base.html  datatable.html  datatable_masonry.html  datatable_test.html  render_for_url.html  table.html
auto_datatables/templatetags/: autotables.py
datatables/: views.py
datatables/static/datatables/: remoteTable.js
datatables/static/datatables/Buttons-2.3.2/css/: mixins.min.css.map
docker/: docs
docs/: conf.py  index.md  index.rst  installation.md  installation.rst  modules.rst  readme.md  usage.md  usage.rst
example/: apps.py  factories.py  urls.py  views.py
example/templates/: base.html  user_card copy.html  user_card.html
tests/: README.md  settings.py
tests/example/: apps.py  urls.py  views.py
tests/example/templates/: user_card copy.html  user_card.html
